--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <div class = "main">
         <img id="character" src="images/m-spiderman.gif" class="character" alt="">
+        <img id="character2" class="character2" src="images/iron-man-stance.gif" alt="">
     </div>
     <script src="app.js"></script>
 </body>
